upd: add version cubit

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -8,5 +8,8 @@
   "enableAnalytics": "Enable analytics",
   "clearHistory": "Clear history",
   "developerWebsite": "Developer website",
-  "support": "Support"
+  "support": "Support",
+  "today": "Today",
+  "unknownState": "Unknown state",
+  "appVersionAndBuildnumber": "Application version: {version} ({buildNumber})"
 }
