upd: - add listener to bloc^ - add new demo data - edit home page

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -11,5 +11,7 @@
   "support": "Support",
   "today": "Today",
   "unknownState": "Unknown state",
-  "appVersionAndBuildnumber": "Application version: {version} ({buildNumber})"
+  "appVersionAndBuildnumber": "Application version: {version} ({buildNumber})",
+  "ringWorkout": "Ring: {ring}",
+  "addExercise": "Добавить упражнение"
 }
