--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -15,15 +15,17 @@
   "ringWorkout": "Ring: {ring}",
   "addExercise": "Add",
   "reps_none": "No data",
- 
   "reps_strength": "{count, plural, one {{count} set} other {{count} sets}}",
   "reps_cardio": "{count, plural, one {{count} session} other {{count} sessions}}",
   "reps_stretching": "{count, plural, one {{count} exercise} other {{count} exercises}}",
   "reps_generic": "{count, plural, one {{count} rep} other {{count} reps}}",
-
   "searchCaption": "Search",
   "nothingFound": "Nothing found, try again.",
   "@nothingFound": {
     "description": "Displayed when a search or query returns no results."
-  }
+  },
+  "duration": "Duration (minutes)",
+  "distance": "Distance (km)",
+  "repeats": "Repetitions",
+  "weight": "Weight"
 }
