upd:update icon

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -24,8 +24,8 @@
   "@nothingFound": {
     "description": "Displayed when a search or query returns no results."
   },
-  "duration": "Duration (minutes)",
-  "distance": "Distance (km)",
+  "duration": "Duration",
+  "distance": "Distance",
   "repeats": "Repetitions",
   "weight": "Weight"
 }
