--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -24,8 +24,8 @@
   "@nothingFound": {
     "description": "Отображается, когда поиск или запрос не дал результатов."
   },
-  "duration": "Время (минуты)",
+  "duration": "Время (сек)",
   "distance": "Дистанция (км)",
   "repeats": "Повторы",
-  "weight": "Вес"
+  "weight": "Вес (кг)"
 }
