--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -24,8 +24,9 @@
   "@nothingFound": {
     "description": "Отображается, когда поиск или запрос не дал результатов."
   },
-  "duration": "Время (сек)",
-  "distance": "Дистанция (км)",
+  "duration": "Время",
+  "distance": "Дистанция (м)",
   "repeats": "Повторы",
-  "weight": "Вес (кг)"
+  "weight": "Вес (кг)",
+  "selectDuration": "Выберите длительность"
 }
